tdf#149673: only check opacity from parent...

... if it has a local css style

Because it's the first in the style stack

Partially reverts 3e0e67a152e9631574e28dacb6e06a96f03ebca2
"tdf#155932: tdf#97717: only apply opacity when primitive"

Change-Id: I6a6bf08a519c84ac58c6111fd7da308cbf8a3021
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154270
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>