svgio/inc/svgstyleattributes.hxx
@@ -293,8 +293,7 @@ namespace svgio::svgreader
             void add_postProcess(
                 drawinglayer::primitive2d::Primitive2DContainer& rTarget,
                 drawinglayer::primitive2d::Primitive2DContainer&& rSource,
-                const std::optional<basegfx::B2DHomMatrix>& pTransform,
-                bool bIsPrimitive) const;
+                const std::optional<basegfx::B2DHomMatrix>& pTransform) const;
 
             /// helper to set mpCssStyleParent temporarily for CSS style hierarchies
             void setCssStyleParent(const SvgStyleAttributes* pNew) { mpCssStyleParent = pNew; }
