svgio/source/svgreader/svglinenode.cxx
@@ -145,7 +145,7 @@ namespace svgio::svgreader
 
             if(!aNewTarget.empty())
             {
-                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform(), true);
+                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform());
             }
         }
 } // end of namespace svgio::svgreader
