svgio/source/svgreader/svgrectnode.cxx
@@ -207,7 +207,7 @@ namespace svgio::svgreader
 
             if(!aNewTarget.empty())
             {
-                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform(), true);
+                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform());
             }
         }
 } // end of namespace svgio::svgreader
